<resources>
    <string name="app_name">ProdApptivity</string>
    <string name="default_webclient_ID">1080031430846-vmlofvh1ubuu4k6iuf518bu6reqsbbh3.apps.googleusercontent.com</string>

    <!-- login page strings -->
    <string name="welcome_string">Welcome to ProdApptivity!</string>
    <string name="login">Login</string>
    <string name="login_description">Please sign in to continue</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <!-- home strings -->
    <string name="hello_name">Hello %1$s!</string>
    <string name="start_your_day">Start your day!</string>
    <string name="welcome_image">Welcome image</string>

    <!-- task manager strings -->
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="week_overview">Week Overview</string>
    <string name="myTasks">My Tasks</string>

    <!-- create task strings -->
    <string name="create_task">Create Task</string>
    <string name="add_a_description">Add a description</string>
    <string name="set_name">Set Name</string>
    <string name="repeating_task">Repeating Task</string>
    <string name="set_mode">Set Mode</string>
    <string name="save_task">Save Task</string>

    <!-- set timer mode strings -->
    <string name="pomodoro_technique">Pomodoro technique</string>
    <string name="incremental">Incremental</string>
    <string name="decremental">Decremental</string>
    <string name="two_minutes_interval">Two minutes interval</string>
    <string name="pomodoro_technique_description">Pomodoro technique: 4 sets of 25 minutes with a 5 minute break between each set</string>

    <!-- create task strings -->
    <string name="set_timer_mode">Set timer mode</string>

    <!-- timer going and break timer strings -->
    <string name="set_as_done">Set as done</string>
    <string name="timer">Timer</string>

    <!-- set timer strings -->
    <string name="set_timer">Set timer</string>

    <!-- set break strings -->
    <string name="set_break">Set break</string>

    <!-- pop-up strings -->
    <string name="every_day">Every day</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="every_week">Every Week</string>
    <string-array name="week_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="timer_types">
        <item>BASIC</item>
        <item>INCREMENTAL</item>
        <item>DECREMENTAL</item>
        <item>POMODORO</item>
    </string-array>
    <string name="string_break">Break</string>
    <string name="start_focusing">Start focusing</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="keep_going">Keep going</string>
    <string name="good_job">You did an amazing job, keep going like this!</string>
    <string name="you_completed_your_task">You completed your task!</string>
    <string name="add_task">Add task</string>
    <string name="logout">Log out</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_all_data_text">Delete all data?</string>
    <string name="task_manager">Task Manager</string>
    <string name="analytics">Analytics</string>
    <string name="letter_monday">M</string>
    <string name="letter_tuesday">T</string>
    <string name="letter_wednesday">W</string>
    <string name="letter_thursday">T</string>
    <string name="letter_friday">F</string>
    <string name="letter_saturday">S</string>
    <string name="letter_sunday">S</string>
    <string name="my_tasks">My tasks</string>
    <string name="start_the_timer">Start the timer</string>
    <string name="set_the_timer_mode">Set the timer mode</string>
    <string name="total_1_d_minutes">Total %1$d minutes</string>
    <string name="task_name">Task Name</string>
    <string name="profile_picture">profile_picture</string>
    <string name="timer_icon">Timer icon</string>
    <string name="timer_mode">Timer mode</string>
    <string name="task_description">Description of the task </string>
    <string name="timer_type">timer type</string>
    <string name="Repeating_days">Repeating days</string>


</resources>