<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:fontFamily="@font/inter_medium"
            android:icon="@drawable/ic_baseline_logout"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_timer"
            android:fontFamily="@font/inter_medium"
            android:icon="@drawable/ic_timer_teal"
            android:title="@string/timer" />

        <item
            android:id="@+id/nav_delete_data"
            android:fontFamily="@font/inter_medium"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_data" />

    </group>

</menu>