<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setTimerMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/set_timer_mode"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/pomodoroTechnique"
        android:layout_width="280dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="7dp"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="@string/pomodoro_technique"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTimerMode">

    </RadioButton>

    <RadioButton
        android:id="@+id/incremental"
        android:layout_width="280dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="@string/incremental"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pomodoroTechnique" />

    <RadioButton
        android:id="@+id/decremental"
        android:layout_width="280dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="@string/decremental"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incremental" />

    <RadioButton
        android:id="@+id/twoMinutesIntervals"
        android:layout_width="280dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="@string/two_minutes_interval"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decremental" />
</androidx.constraintlayout.widget.ConstraintLayout>