<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="200dp"
    android:layout_margin="25dp"
    android:layout_gravity="center"
    android:background="@drawable/task_info_card"
    android:orientation="vertical">


    <RadioButton
        android:id="@+id/doesNotRepeat"
        android:layout_width="229dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:focusable="true"
        android:paddingHorizontal="26dp"
        android:text="@string/does_not_repeat"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/everyDay"
        android:layout_width="229dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:paddingHorizontal="26dp"
        android:text="@string/every_day"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doesNotRepeat" />

    <RadioButton
        android:id="@+id/everyWeek"
        android:layout_width="229dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:paddingHorizontal="26dp"
        android:text="@string/every_week"
        android:textColor="@color/gray6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/everyDay" />
</androidx.constraintlayout.widget.ConstraintLayout>